--- a/TestLauncher/TestLauncher.csproj
+++ b/TestLauncher/TestLauncher.csproj
@@ -58,6 +58,10 @@
         <Project>{3e3223ac-c054-4a3d-9233-da24acad7c16}</Project>
         <Name>KN_Core</Name>
       </ProjectReference>
+      <ProjectReference Include="..\KN_Lights\KN_Lights.csproj">
+        <Project>{a684b9d2-6b5f-4c40-a127-234c8eb22850}</Project>
+        <Name>KN_Lights</Name>
+      </ProjectReference>
       <ProjectReference Include="..\KN_Loader\KN_Loader.csproj">
         <Project>{ecb0dab8-34f5-4eb6-bcdc-67c7212a89ec}</Project>
         <Name>KN_Loader</Name>
