--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -140,6 +140,7 @@
     <ItemGroup>
         <EmbeddedResource Include="Resources\GUI\base.png" />
         <EmbeddedResource Include="Resources\GUI\outline.png" />
+        <EmbeddedResource Include="Resources\GUI\help.png" />
         <EmbeddedResource Include="Resources\GUI\puzzle.png" />
         <EmbeddedResource Include="Resources\GUI\discord.png" />
     </ItemGroup>
