added mod tooltips

--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -138,6 +138,7 @@
         <EmbeddedResource Include="Resources\supporters.xml" />
     </ItemGroup>
     <ItemGroup>
+        <EmbeddedResource Include="Resources\GUI\tooltip.png" />
         <EmbeddedResource Include="Resources\GUI\base.png" />
         <EmbeddedResource Include="Resources\GUI\outline.png" />
         <EmbeddedResource Include="Resources\GUI\help.png" />
