added dash lights

--- a/KN_Lights/KN_Lights.csproj
+++ b/KN_Lights/KN_Lights.csproj
@@ -78,6 +78,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="CarLights.cs" />
+        <Compile Include="DashLight.cs" />
         <Compile Include="LightsConfig.cs" />
         <Compile Include="LightsSet.cs" />
         <Compile Include="Loader.cs" />
