move hazards code to separate files

--- a/KN_Lights/KN_Lights.csproj
+++ b/KN_Lights/KN_Lights.csproj
@@ -82,6 +82,7 @@
         <Compile Include="CarLights\HazardLights.cs" />
         <Compile Include="CarLights\LightsConfig.cs" />
         <Compile Include="CarLights\LightsSet.cs" />
+        <Compile Include="Hazards.cs" />
         <Compile Include="Loader.cs" />
         <Compile Include="Lights.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
@@ -100,9 +101,8 @@
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Include="Resources\HeadLightMask.png" />
-    </ItemGroup>
-    <ItemGroup>
       <EmbeddedResource Include="Resources\kn_lights_default.knl" />
+      <EmbeddedResource Include="Resources\kn_default_hazards.knl" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
