--- a/KN_Core/KN_Core.csproj
+++ b/KN_Core/KN_Core.csproj
@@ -132,6 +132,7 @@
         <EmbeddedResource Include="Resources\Locale\pl.xml" />
         <EmbeddedResource Include="Resources\Locale\jp.xml" />
         <EmbeddedResource Include="Resources\Locale\ita.xml" />
+        <EmbeddedResource Include="Resources\Locale\de.xml" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Resources\kn_exhaust_default.kne" />
